--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,14 @@
+@import "base/variables";
+@import "base/mixins";
+@import 'blocks/promo';
+@import 'blocks/header';
+@import 'blocks/buttons';
+
 * { 
     font-family: Museo Sans Cyrl, sans-serif;
 }
 
-@import "base/variables";
-@import "base/mixins";
+.container {
+    max-width: 950px;
+    margin: 0 auto;
+}
