second section and adaptation

--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -33,4 +33,11 @@
             text-decoration: none;
         }
     }
+    .menu {
+        display: none;
+        list-style-type: none;
+    }
+    .hamburger {
+        display: none;
+    }
 }
