--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -2,20 +2,20 @@
     min-height: 470px;
     background-color: #f6f6f6;
     padding: 70px 0 98px 0;
-    &__header {
+    .title {
         font-size: 30px;
         font-weight: 700;
         color: #0d0d0d;
         text-transform: uppercase;
         text-align: center;
-        margin-bottom: 65px;
     }
     &__wrapper {
+        margin-top: 65px;
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
     }
-    &__block {
+    &__item {
         width: 247px;
         img {
             display: block;
@@ -23,14 +23,14 @@
             margin-bottom: 38px;
         }
     }
-    &__subheader {
+    &__subtitle {
         font-size: 18px;
         font-weight: 700;
         text-align: center;
         color: #0d0d0d;
         margin-bottom: 26px;
     }
-    &__text {
+    &__descr {
         font-size: 14px;
         font-weight: 500;
         text-align: center;
