--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,8 @@
 @import 'blocks/titles';
 @import 'blocks/consultation';
 @import 'blocks/forms';
-@import 'base/media';
+@import 'blocks/carousel';
+@import '_media.scss';
 
 * { 
     font-family: Museo Sans Cyrl, sans-serif;
