--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -105,10 +105,37 @@
     .feedback {
         .title {
             font-size: 28px;
+            line-height: 28px;
             margin-bottom: 60px;
         }
         &-item {
             justify-content: space-around;
+        }
+    }
+    .footer {
+        height: 550px;
+        iframe {
+            height: 550px;
+        }
+        &__info {
+            width: 440px;
+            height: 250px;
+            padding: 40px 58px 50px 58px;
+        }
+        &__addr {
+            margin-bottom: 32px;
+            font-size: 18px;
+            line-height: 18px;
+        }
+        &__phone {
+            font-size: 18px;
+            line-height: 18px;
+            margin-bottom: 32px;
+        }
+        &__social-item {
+            width: 47px;
+            height: 47px;
+            margin: 0px 13px;
         }
     }
 }
@@ -252,6 +279,7 @@
     .feedback {
         .title {
             font-size: 25px;
+            line-height: 25px;
             margin-bottom: 50px;
         }
         &-item {
@@ -267,6 +295,32 @@
                 margin-top: 35px;
                 margin-bottom: 40px;
             }
+        }
+    }
+    .footer {
+        height: 480px;
+        iframe {
+            height: 480px;
+        }
+        &__info {
+            width: 405px;
+            height: 220px;
+            padding: 30px 48px 40px 48px;
+        }
+        &__addr {
+            margin-bottom: 28px;
+            font-size: 17px;
+            line-height: 17px;
+        }
+        &__phone {
+            font-size: 17px;
+            line-height: 17px;
+            margin-bottom: 30px;
+        }
+        &__social-item {
+            width: 45px;
+            height: 45px;
+            margin: 0px 12px;
         }
     }
 }
@@ -483,9 +537,11 @@
         }
     }
     .feedback {
-        min-height: 910px;
+        min-height: 840px;
+        padding-bottom: 40px;
         .title {
             font-size: 22px;
+            line-height: 22px;
             margin-bottom: 40px;
         }
         &-item {
@@ -504,6 +560,35 @@
             }
             br {
                 display: none;
+            }
+        }
+    }
+    .footer {
+        height: 460px;
+        iframe {
+            height: 460px;
+        }
+        &__info {
+            width: 360px;
+            height: 185px;
+            padding: 25px 38px 30px 38px;
+        }
+        &__addr {
+            margin-bottom: 25px;
+            font-size: 16px;
+            line-height: 16px;
+        }
+        &__phone {
+            font-size: 16px;
+            line-height: 16px;
+            margin-bottom: 25px;
+        }
+        &__social-item {
+            width: 40px;
+            height: 40px;
+            margin: 0px 10px;
+            img {
+                height: 21px;
             }
         }
     }
@@ -666,8 +751,10 @@
         }
     }
     .feedback {
+        padding-bottom: 20px;
         .title {
             font-size: 19px;
+            line-height: 19px;
             margin-bottom: 20px;
         }
         &-item {
@@ -699,6 +786,32 @@
             &:last-child {
                 margin-bottom: 50px;
             }
+        }
+    }
+    .footer {
+        height: 450px;
+        iframe {
+            height: 450px;
+        }
+        &__info {
+            width: 100%;
+            height: 150px;
+            padding: 25px 38px 30px 38px;
+        }
+        &__addr {
+            margin-bottom: 15px;
+            font-size: 15px;
+            line-height: 15px;
+        }
+        &__phone {
+            font-size: 15px;
+            line-height: 15px;
+            margin-bottom: 20px;
+        }
+        &__social-item {
+            width: 38px;
+            height: 38px;
+            margin: 0px 8px;
         }
     }
 }
